--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "express": "~4.13.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.0"
-  }
+    "gulp": "^3.9.0",
+    "gulp-cssmin": "^0.1.7"
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/thebeebs/edgeworkshop.git"
+}
 }
